# rover-sample-2025

./: .gitignore  .gitmodules  LICENSE  README.md
remote/: README.md  install_dependency.sh  start_ROS.sh  start_gamepad.sh  start_wasd-controller.sh
remote/project/: README.md
remote/remote_ws/src/gamepad/: setup.cfg
remote/remote_ws/src/gamepad/gamepad/: gamepad_publisher.py
remote/remote_ws/src/gamepad/launch/: gamepad.launch.py
remote/remote_ws/src/keyboard/: package.xml  setup.py
remote/remote_ws/src/keyboard/keyboard/: keyboard_publisher.py  wasd_controller.py  wasd_publisher.py
remote/remote_ws/src/keyboard/launch/: wasd_controller.launch.py
remote/src/: clean_ros_ws.sh  ros2_joy_to_cmd_vel.py  test_gamepad.py  test_keyboard-monitor.py
rover/: README.md  install_dependency.sh  install_discovery_service.sh  install_rover_service.sh  ros-discovery.service  ros-discovery.sh  rosenv.sh  rosenv_default.sh  rover.service  rover.sh  start_ROS.sh
rover/doc/: Yahboom Rosboard V3 Driver API リファレンス.md
rover/project/: README.md  sample.py
rover/rover_ws/: README.md
rover/rover_ws/src/OrbbecSDK_ROS2/orbbec_camera/: CMakeLists.txt
rover/rover_ws/src/camera/: CMakeLists.txt  package.xml
rover/rover_ws/src/camera/launch/: aruco_detector.launch.py  camera.launch.py  camera.republish.launch.py  camera_fallback.launch.py
rover/rover_ws/src/camera/src/: aruco_detector.cpp  camera.cpp  camera_fallback.cpp
rover/rover_ws/src/camera_main/: CMakeLists.txt  package.xml
rover/rover_ws/src/robot_control_board/: package.xml  setup.cfg  setup.py
rover/rover_ws/src/rover/: package.xml  setup.py
rover/src/: clean_ros_ws.sh  ffmpeg_image_tranceport_decode.sh  ffmpeg_image_tranceport_encode.sh  ros2_v4l2_camera_pub.sh  yahboom_rosboard_v3_driver.py
rover_remote/: README.md  rosenv.sh  rosenv_default.sh  start_ROS.sh  start_gamepad.sh
rover_remote/remote_ws/src/gamepad/: package.xml  setup.py
rover_remote/src/: ros2_gamepad_pub.py
(+2 files in other folders)
